--- a/ChoreJamming.Client/Components/Pages/ChorePlayer.razor
+++ b/ChoreJamming.Client/Components/Pages/ChorePlayer.razor
@@ -12,6 +12,9 @@
             <input @bind="choreInput" class="form-control" placeholder="Type a song name..." />
             <button class="btn btn-primary" @onclick="FindSong">Search</button>
         </div>
+        <div class="input-group">
+            <button class="btn btn-secondary" @onclick="Remix">Remix!</button>
+        </div>
     </div>
 </div>
 
@@ -52,8 +55,16 @@ else if (hasSearched)
         if (!string.IsNullOrWhiteSpace(choreInput))
         {
             hasSearched = false;
-            currentSong = await ChoreService.ProcessChoreAsync(choreInput);
+            currentSong = await ChoreService.ProcessChoreAsync(choreInput, false);
             hasSearched = true;
+        }
+    }
+
+    private async Task Remix()
+    {
+        if (hasSearched)
+        {
+            currentSong = await ChoreService.ProcessChoreAsync(choreInput, true);
         }
     }
     private string GetEmbedUrl(string url)
